PowerManagerService: Send broadcast when going to sleep

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -684,6 +684,8 @@
     <!-- Font service -->
     <protected-broadcast android:name="com.android.server.ACTION_FONT_CHANGED" />
 
+    <protected-broadcast android:name="colt.intent.action.GO_TO_SLEEP" />
+
     <!-- ====================================================================== -->
     <!--                          RUNTIME PERMISSIONS                           -->
     <!-- ====================================================================== -->
